<resources>
    <string name="app_name">Kotlin_YoutubeApi</string>
    <string name="try_again">Try again</string>
    <string name="todo">TODO</string>
    <string name="playlist">Playlist</string>
    <string name="video_name">Video Name</string>
    <string name="series_count">32 video series</string>
    <string name="long_example">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="video_series"> video series</string>
</resources>