<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_trans_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/trans_black_70"
                android:paddingTop="4dp"
                android:paddingEnd="26dp"
                android:paddingBottom="4dp"
                android:text="@string/playlist"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry"
                android:visibility="visible"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_video_name"
        android:layout_toEndOf="@+id/cv_image"
        android:layout_marginStart="8dp"
        android:text="@string/video_name"
        android:fontFamily="@font/fjallaone_regular"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_series_and_duration"
        android:text="@string/series_count"
        android:fontFamily="@font/notosans_regular"
        android:textSize="12sp"
        android:textColor="@color/dark_black_151515"
        android:layout_toEndOf="@+id/cv_image"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/tv_video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>