<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.playlist_details_activity.PlaylistDetailsActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_playlist"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_playlist"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:background="@color/light_gray_f6f6f6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_playlist_details"
                android:text="@string/long_example"
                android:textSize="15sp"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/notosans_regular"
                android:layout_gravity="top"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                app:layout_collapseMode="parallax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_playlist"
                app:title="Video Name"
                app:titleTextColor="@color/dark_gray"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_playlist"
        app:layout_anchor="@id/appbar_playlist"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_play_arrow_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_playlist_count_series"
                android:text="@string/series_count"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:fontFamily="@font/notosans_regular"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_playlist_details"
                tools:listitem="@layout/item_rv_playlist"
                android:layout_below="@+id/tv_playlist_count_series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <include
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/item_error_connection" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>